# automata-safa

./: .gitignore  .hlint.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Session.vim  abcd-equals-abcde.py  abcd-equals-abcde.sh  afabuild.cabal  automata-safa.cabal  check-benchmarks.sh  convert-all-emp.sh  convert-emp-incl-bisim.sh  convert-ere.sh  convert-for-checkers.sh  convert-ltl.sh  convert-mata-bisim-no-boom.sh  convert-one-emp.sh  cox-unsat-inclusion.sh  genbenchmarks.sh  hie.yaml  nth-section.sh  pandize.sh  playground.sh  reconvert  reconvert2  regenerate-abcd-equals-abcde.sh  regenerate-afa.sh  regexes-to-nfa.sh  stranger.sh
afa-instances/: a1.afa  a2.afa  empty.afa  empty_and.afa  empty_skip.afa  empty_until.afa  nonempty.afa  nonempty_a.afa  nonempty_or.afa  nonempty_skip.afa  nonempty_true.afa  nonempty_until.afa
app/automata-safa-one/: Main.hs
app/dir-checker/: Main.hs
app/dir-sat/: Main.hs
app/ltle-sat/: Main.hs
app/ltle-to-afa/: Main.hs
papers/qcir/: Makefile  main.bib  main.tex
src/: Afa.hs  lib.rs
src/Afa/: Functor.hs  Prism.hs  Simplify.hs  StatePositiveness.hs  TreeDag.hs
src/Afa/Functor/: Fix.hs
src/Afa/TreeDag/: Patterns.hs
src/Afa/TreeDag/Patterns/: Builder.hs
src/convert/Afa/Convert/: Ada.hs  Ada2.hs  AdaBits.hs  CnfAfa.hs  Dot.hs  Identifier.hs  Ltl.hs  Ltle.hs  Ltle2.hs  Machete.hs  Mona.hs  Pretty.hs  PrettyStranger.hs  PrettyStranger2.hs  Qcir.hs  Separated.hs  Separated2.hs  Smv.hs  Smv2.hs  Stranger.hs  Stranger2.hs  Vtf.hs
src/convert/Afa/Convert/Capnp/: Afa.hs  CnfAfa.hs  Range16Nfa.hs  Separated.hs
src/convert/Afa/Convert/Separated/: Model.hs  ToDnf.hs
src/ltl/: Ltl.hs
src/ltl/Ltl/: Lib.hs  Parser.hs
src/model/: Afa.hs  Create.hs  DepDict.hs  Lift.hs  LiftTH.hs  Shaper.hs  TypeDict.hs
src/model/Afa/: BasicSimp.hs  Bool.hs  Build.hs  Delit.hs  DnfStates.hs  Finalful.hs  IORef.hs  Language.hs  Lib.hs  Negate.hs  Prism.hs  RemoveFinals.hs  STRef.hs  Separate.hs  Separated.hs  ShallowHashable.hs  StatePositiveness.hs  States.hs  Term.hs
src/model/Afa/Finalful/: STerm.hs
src/model/Afa/Lib/: Free.hs  LiftArray.hs  QMinCut.hs  Tree.hs
src/model/Afa/Ops/: Boolean.hs  Compound.hs  Goblin.hs  Goblin2.hs  Language.hs  Preprocess.hs  QMinCut.hs  Randomize.hs
src/model/Afa/Term/: Bool.hs  Fix.hs  Mix.hs  Prism.hs  Simplify.hs  TreeF.hs  TreeFBase.hs
src/model/Afa/Term/Bool/: Simplify.hs
src/model/Afa/Term/Mix/: Simplify.hs  ToDnf.hs
src/model/Afa/Term/Prism/Ops/: Simplify.hs  StatePositiveness.hs
src/model/Afa/Term/TreeF/: Ops.hs
src/model/Afa/TreeDag/: Patterns.hs
src/model/Afa/TreeDag/Patterns/: Builder.hs
src/model/Shaper/: Helpers.hs
test/: Doctest.hs  Main.hs
test/Test/Afa/: Goblin.hs  QMinCut.hs  Simplify.hs
test/Test/Afa/Convert/: Separated.hs  Stranger.hs
test/Test/Tree/: Simplify.hs  StatePositiveness.hs
test/Tree/: Simplify.hs  StatePositiveness.hs
