cabal-version:       3.0
name:                automata-safa
version:             0.1.0.0
synopsis:            symbolic alternating finite automata
license:             BSD-3-Clause
license-file:        LICENSE
author:              Pavol Vargovcik
maintainer:          pavol.vargovcik@gmail.com
category:            Math
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Afa.IORef
    Afa.Delit
    Afa.Term
    Afa.Build
    Afa.Separate
    Afa.Lib
    Afa.States
    Afa.RemoveFinals
    Afa.ShallowHashable
  build-depends:
    base >=4.17.0.0 && <4.18,
    generic-data ^>=1.0.0.0,
    mtl ^>=2.2.2 && <2.4,
    unordered-containers ^>=0.2.19.1,
    hashable ^>=1.4.2.0,
    template-haskell ^>=2.19.0.0,
    composition-extra ^>=2.0.0,
    data-fix ^>=0.3.2,
    free ^>=5.1.10,
    array ^>=0.5.4.0,
    lens ^>=5.2,
    random ^>=1.2.1.1,
    inversion-of-control,
  hs-source-dirs:      src/model
  default-language:    Haskell2010

library convert
  visibility: public
  exposed-modules:
    Afa.Convert.PrettyStranger
    Afa.Convert.Vtf
    Afa.Convert.Identifier
    Afa.Convert.Ltl
    Afa.Convert.Smv
    Afa.Convert.Qcir
  build-depends:
    base >=4.17.0.0 && <4.18,
    attoparsec ^>=0.14.4,
    attoparsec-expr ^>=0.1.1.2,
    text ^>=2.0.1,
    interpolate ^>=0.2.1,
    free ^>=5.1.10,
    unordered-containers ^>=0.2.19.1,
    composition ^>=1.0.2.2,
    mtl ^>=2.2.2 && < 2.4,
    array ^>=0.5.4.0,
    data-fix ^>=0.3.2,
    generic-data ^>=1.0.0.0,
    hashable ^>=1.4.2.0,
    random ^>=1.2.1.1,
    automata-safa,
    inversion-of-control,
  hs-source-dirs:      src/convert
  default-language:    Haskell2010

executable automata-safa-one
  main-is:             Main.hs
  build-depends:
    base >=4.17.0.0 && <4.18,
    text ^>=2.0.1,
    unordered-containers ^>=0.2.19.1,
    data-fix ^>=0.3.2,
    composition-extra ^>=2.0.0,
    free ^>=5.1.10,
    interpolate ^>=0.2.1,
    automata-safa,
    automata-safa:convert,
    inversion-of-control,
  hs-source-dirs:      app/automata-safa-one
  default-language:    Haskell2010
  ghc-options: -threaded
